--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ footer {
 
     .main-image {
         /* 📍 Максимальная ширина для главного изображения в % */
-        max-width: 730px;
+        max-width: 100%;
     }
 
     .text-wrapper {
@@ -238,7 +238,7 @@ footer {
 
     .about-section {
     /* 📍 Внутренний отступ сверху и снизу */
-    padding: 60px 20px;
+    padding: 60px;
     }
 
 }
@@ -255,7 +255,7 @@ footer {
 @media screen and (max-width: 576px) {
     .main-section {
         /* 📍 Внутренние отступы сверху и снизу */
-        padding: 30px 20px 60px;
+        padding: 30px 0px 60px;
     }
 
     .main-section .wrapper {
